# First

./: README.md  notice.md  readme.md
MVC/: re3.pro
MVC/app/: app.cpp  examples.pri  main.cpp  segview.pro
MVC/controller/: readme.md
MVC/controller/header/: SegController.h
MVC/controller/source/: SegController.cpp
MVC/core/: readme.md
MVC/core/header/: Fragment_filter.hpp  Gaussian_filter.hpp  Gaussianfilter.h  OldMovie_filter.h  papasfilter.h  segcore.hpp
MVC/core/source/: Fragment_filter.cpp  Gaussian_filter.cpp  Line_filter.cpp  OldMovie_filter.cpp  Sketch_filter.cpp
MVC/model/: CMakeLists.txt
MVC/model/header/: config.h  segmodel.h
MVC/model/source/: segimagemodel.cpp.autosave  segmodel.cpp  test_segmodel.cpp
MVC/view/: SegController.cpp
MVC/view/header/: segview.h  segview.h.cpp
MVC/view/source/: segview.cpp
MVVM/: re3.pro
MVVM/app/: app.cpp
MVVM/core/: CMakeLists.txt  readme.md
MVVM/core/header/: Black_filter.hpp  Casting_filter.hpp  ColorChange_filter.hpp  Fragment.hpp  Freezing_filter.hpp  Gaussian.h  Glass_filter.hpp  Line.hpp  Line_filter.hpp  OldMovie.h  Sketch.hpp  Sketch_filter.hpp  papasfilter.h  segcore.hpp
MVVM/core/source/: Black_filter.cpp  Casting_filter.cpp  ColorChange_filter.cpp  Fragment.cpp  Freezing_filter.cpp  Gaussian.cpp  Glass_filter.cpp  Line.cpp  OldMovie.cpp  Sketch.cpp  test_filter.cpp
MVVM/model/: CMakeLists.txt  interface.md
MVVM/model/header/: config.h  segmodel.h
MVVM/model/source/: segmodel.cpp  test_segmodel.cpp
MVVM/view/header/: segFeature.h  segparameter.h  segparameterpanel.h  segview.h
MVVM/view/source/: segFeature.cpp  segparameter.cpp  segparameterpanel.cpp  segview.cpp  test_segview.cpp
MVVM/viewmodel/header/: segViewModel.h
MVVM/viewmodel/source/: segviewmodel.cpp
app/gui/: Data.pro  mainwindow.ui  readme.txt
appsrc/core/: CMakeLists.txt  interface.md
appsrc/core/header/: Gaussian_filter.hpp  segcore.hpp
appsrc/core/source/: Gaussian_filter.cpp  test_filter.cpp
appsrc/core/src/: main.cpp
appsrc/gui/: main.cpp  mainwindow.cpp
appsrc/model/: interface.md  target.cpp  target.hpp
appsrc/model/header/: global.h  segimagemodel.h  segmanager.h  segmodel.h  segmodel.hpp  segmodel_manager.h  segtarget.h  target.hpp
appsrc/model/source/: segimagemodel.cpp  segmanager.cpp  segmodel.hpp  segtarget.cpp
appsrc/view/: SegController.cpp  SegController.h  examples.pri  main.cpp  segview.pro
doc/: 3160102459_林宇翔.docx  readme.md  小组说明.txt  需求报告.docx
doc/report/: readme.txt  report.tex
